# PCAccounting

./: .gitignore  CMakeLists.txt  ComputerDialog.cpp  ComputerDialog.h  ComputersTabWidget.cpp  ComputersTabWidget.h  EmployeeDialog.cpp  EmployeeDialog.h  EmployeesTabWidget.cpp  EmployeesTabWidget.h  README.md  StatsTabWidget.cpp  main.cpp  mainwindow.cpp  mainwindow_actions.cpp  mainwindow_refresh.cpp  mainwindow_search.cpp  mainwindow_stats.cpp  mainwindow_ui.cpp
docs/specs/: 01-overview.docx  02-entity-parameters.docx  03-user-requirements.docx  04-ui-task.docx  05-entity-operations.docx
docs/uml/: pcaccounting-class-diagram.puml
projects/: CMakeLists.txt
projects/src/: ConsoleApp.cpp  main.cpp
projects/src/core/: ApplicationController.cpp  Database.cpp  Database.h
projects/src/crypto/: CryptoService.cpp  CryptoService.h
projects/src/models/: Employee.h
projects/src/storage/: Serializer.cpp  Serializer.h  StorageService.cpp
projects/src/tests/: DatabaseTests.cpp  TestMain.cpp
projects/src/utils/: DateUtils.h
src/app/: main.cpp
src/backend/core/: ApplicationController.h  Database.cpp  Database.h
src/backend/crypto/: CryptoService.cpp
src/backend/models/: Computer.h  Employee.h
src/backend/storage/: StorageService.cpp  StorageService.h
src/backend/utils/: DateUtils.cpp
src/ui/dialogs/: ComputerDialog.h  EmployeeDialog.cpp  EmployeeDialog.h
src/ui/main_window/: mainwindow.h  mainwindow_actions.cpp  mainwindow_refresh.cpp  mainwindow_search.cpp  mainwindow_stats.cpp  mainwindow_ui.cpp
src/ui/tabs/: ComputersTabWidget.cpp  EmployeesTabWidget.cpp  StatsTabWidget.cpp  StatsTabWidget.h
